--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "my-app",
+  "name": "neo4j-collapsible-button",
   "version": "0.1.0",
+  "private": true,
+  "proxy": "http://103.102.44.216:5000",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
